crates/obj-rs/tests/derive_compile_fail/each_on_non_vec.rs
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, obj::Document)]
struct EachOnNonVec {
    #[obj(index = each)]
    field: String,
}

fn main() {}
